C9 and C10 for checking

--- a/assignment-3/kim_changsu_reyes-cortes_jesse_assignment3.ipynb
+++ b/assignment-3/kim_changsu_reyes-cortes_jesse_assignment3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -29,6 +29,7 @@
     "# part A: model code (design multinomial naive bayes)\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import math\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "plt.style.use('ggplot')\n",
@@ -372,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -393,6 +394,7 @@
     "cv = CountVectorizer(lowercase=True, stop_words='english')\n",
     "x_counts = cv.fit_transform(x)\n",
     "print(x_counts.shape)\n",
+    "#print(x_counts)\n",
     "#x_train_counts = cv.fit_transform(x_train)\n",
     "#print(x_train_counts.shape)\n",
     "#x_test_counts = cv.transform(x_test)\n",
@@ -413,35 +415,233 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# C.8 create data \n"
+    "# C.8 create data\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0                         ok lar ... joking wif u oni ...\n",
+      "1       free entry in 2 a wkly comp to win fa cup fina...\n",
+      "2       u dun say so early hor ... u c already then sa...\n",
+      "3       nah i do n't think he go to usf , he life arou...\n",
+      "4       freemsg hey there darling it 's been 3 week 's...\n",
+      "                              ...                        \n",
+      "5566    this is the 2nd time we have tried 2 contact u...\n",
+      "5567                will ü b going to esplanade fr home ?\n",
+      "5568    pity , * wa in mood for that . so ... any othe...\n",
+      "5569    the guy did some bitching but i acted like i '...\n",
+      "5570                            rofl . it true to it name\n",
+      "Name: text_lemmatized, Length: 5571, dtype: object\n",
+      "-----------------------------------------------------------------------------------------\n",
+      "5377    free entry to the gr8prizes wkly comp 4 a chan...\n",
+      "4268                     hey so whats the plan this sat ?\n",
+      "1493    how are you with money ... a in to you ... mon...\n",
+      "5162                              ok leave no need to ask\n",
+      "2595    sunshine quiz wkly q ! win a top sony dvd play...\n",
+      "                              ...                        \n",
+      "2143    you stayin out of trouble stranger ! ! saw dav...\n",
+      "521                            shall i come to get pickle\n",
+      "2612               yes . it 's all innocent fun . o : - )\n",
+      "3569                     she 's fine . sends her greeting\n",
+      "1770    dont show yourself . how far . put new picture...\n",
+      "Name: text_lemmatized, Length: 5571, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
-    "# C.9 shuffle rows of data \n"
+    "# C.9 shuffle rows of data \n",
+    "shuffled = df.sample(frac=1)\n",
+    "print(df['text_lemmatized'])\n",
+    "print('-----------------------------------------------------------------------------------------')\n",
+    "print(shuffled['text_lemmatized'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# C.10 partition data (80% train - 20% test)\n"
+    "def partition(X, Y, t): #take 3 arguments(numpy array with rows representing data samples and columns represeting features)\n",
+    "        \n",
+    "    test_size = math.ceil(len(Y)*t)\n",
+    "    training_size = len(Y)-test_size\n",
+    "    training_data = X[0:training_size][:]\n",
+    "    testing_data = X[training_size+1:len(Y)] [:]\n",
+    "    training_vector = Y[0:training_size]\n",
+    "    testing_vector = Y[training_size+1:len(Y)]\n",
+    "    \n",
+    "    return [training_data, testing_data, training_vector, testing_vector]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<4456x7961 sparse matrix of type '<class 'numpy.int64'>'\n",
+       " \twith 34805 stored elements in Compressed Sparse Row format>,\n",
+       " <1114x7961 sparse matrix of type '<class 'numpy.int64'>'\n",
+       " \twith 8582 stored elements in Compressed Sparse Row format>,\n",
+       " 0       0\n",
+       " 1       1\n",
+       " 2       0\n",
+       " 3       0\n",
+       " 4       1\n",
+       "        ..\n",
+       " 4451    0\n",
+       " 4452    0\n",
+       " 4453    0\n",
+       " 4454    0\n",
+       " 4455    0\n",
+       " Name: spam, Length: 4456, dtype: int32,\n",
+       " 4457    0\n",
+       " 4458    0\n",
+       " 4459    1\n",
+       " 4460    0\n",
+       " 4461    0\n",
+       "        ..\n",
+       " 5566    1\n",
+       " 5567    0\n",
+       " 5568    0\n",
+       " 5569    0\n",
+       " 5570    0\n",
+       " Name: spam, Length: 1114, dtype: int32]"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# C.10 partition data (80% train - 20% test)\n",
+    "partition(x_counts, y, .20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# part D: Model Evaluation\n",
-    "# D.11 model selection via hyper-parameter tuning\n"
+    "def precision(x,y):\n",
+    "    truePositive = 0\n",
+    "    falsePositive = 0\n",
+    "    for i in range(0, len(x)):\n",
+    "        if(x[i] == 1 and .5 < y[i]):\n",
+    "            truePositive = truePositive + 1\n",
+    "        elif(x[i] == 0 and .5 < y[i]):\n",
+    "            falsePositive = falsePositive + 1\n",
+    "    return truePositive/(truePositive+falsePositive)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recall(x,y):\n",
+    "    truePositive = 0\n",
+    "    falseNegative = 0\n",
+    "    for i in range(0, len(x)):\n",
+    "        if(x[i] == 1 and .5 < y[i]):\n",
+    "            truePositive = truePositive + 1\n",
+    "        elif(x[i] == 0 and y[i] <= .5):\n",
+    "            falseNegative = falseNegative + 1\n",
+    "    return truePositive/(truePositive+falseNegative)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-73-adb556589281>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-73-adb556589281>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    return 2precision(x,y)recall(x,y)/(precision(x,y)+recall(x,y))\u001b[0m\n\u001b[1;37m                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f1(x,y):\n",
+    "    return 2precision(x,y)recall(x,y)/(precision(x,y)+recall(x,y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def confusion_matrix(x,y):\n",
+    "    TN = 0\n",
+    "    FP = 0\n",
+    "    FN = 0\n",
+    "    TP = 0\n",
+    "    for i in range(0, len(x)):\n",
+    "        if(x[i]==0 and y[i] <= .5):\n",
+    "            TN = TN + 1\n",
+    "        elif(x[i]==0 and .5 < y[i]):\n",
+    "            FP = FP + 1\n",
+    "        elif(x[i]==1 and y[i] <= .5):\n",
+    "            FN = FN + 1\n",
+    "        elif(x[i]==1 and .5 < y[i]):\n",
+    "            TP = TP + 1\n",
+    "\n",
+    "    return [[TN, FP],[FN, TP]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'a' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-76-94654b5bc7d8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0malpha\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m0.0001\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.001\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.01\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1.0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1.5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2.0\u001b[0m\u001b[1;33m]\u001b[0m      \u001b[1;31m#hyperparameter\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mscore\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m:\u001b[0m                                                 \u001b[1;31m#loop hyperparameter and\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m     \u001b[0mmul_NB\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mMultinomial_NB\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[0mmul_NP\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m                   \u001b[1;31m#need to put parameter\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'a' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#Part D.\n",
+    "#11 Model selection via Hyper-parameter tuning\n",
+    "alpha = [0.0001, 0.001, 0.01, 0,1, 0.5, 1.0, 1.5, 2.0]      #hyperparameter \n",
+    "score = []\n",
+    "for i in a:                                                 #loop hyperparameter and \n",
+    "    mul_NB = Multinomial_NB(i)\n",
+    "    mul_NP.fit()                   #need to put parameter\n",
+    "    prediction = mul_NP.predict()  #need to put parameter\n",
+    "    score.append(f1())             #need to put parameter\n",
+    "\n",
+    "max_score = 0;\n",
+    "model_number = 0;\n",
+    "for j in range(0, len(score)):\n",
+    "    if score[j] > max_score:\n",
+    "        max_score = score[j]\n",
+    "        model_number = j\n",
+    "    else:\n",
+    "        continue"
    ]
   },
   {
