Changed data creation

--- a/assignment-3/kim_changsu_reyes-cortes_jesse_assignment3.ipynb
+++ b/assignment-3/kim_changsu_reyes-cortes_jesse_assignment3.ipynb
@@ -411,56 +411,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# C.8 create data\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0                         ok lar ... joking wif u oni ...\n",
-      "1       free entry in 2 a wkly comp to win fa cup fina...\n",
-      "2       u dun say so early hor ... u c already then sa...\n",
-      "3       nah i do n't think he go to usf , he life arou...\n",
-      "4       freemsg hey there darling it 's been 3 week 's...\n",
-      "                              ...                        \n",
-      "5566    this is the 2nd time we have tried 2 contact u...\n",
-      "5567                will ü b going to esplanade fr home ?\n",
-      "5568    pity , * wa in mood for that . so ... any othe...\n",
-      "5569    the guy did some bitching but i acted like i '...\n",
-      "5570                            rofl . it true to it name\n",
-      "Name: text_lemmatized, Length: 5571, dtype: object\n",
+      "  (0, 5091)\t1\n",
+      "  (0, 4195)\t1\n",
+      "  (0, 4014)\t1\n",
+      "  (0, 7723)\t1\n",
+      "  (0, 5117)\t1\n",
+      "  (1, 3131)\t1\n",
+      "  (1, 2765)\t2\n",
+      "  (1, 7770)\t1\n",
+      "  (1, 2046)\t1\n",
+      "  (1, 7734)\t1\n",
+      "  (1, 2888)\t2\n",
+      "  (1, 2249)\t1\n",
+      "  (1, 2993)\t1\n",
+      "  (1, 7134)\t1\n",
+      "  (1, 411)\t1\n",
+      "  (1, 402)\t1\n",
+      "  (1, 7010)\t1\n",
+      "  (1, 790)\t1\n",
+      "  (1, 5823)\t1\n",
+      "  (1, 5721)\t1\n",
+      "  (1, 6682)\t1\n",
+      "  (1, 7309)\t1\n",
+      "  (1, 5772)\t1\n",
+      "  (1, 1123)\t1\n",
+      "  (1, 77)\t1\n",
+      "  :\t:\n",
+      "  (5566, 2661)\t1\n",
+      "  (5566, 308)\t1\n",
+      "  (5566, 706)\t1\n",
+      "  (5566, 165)\t1\n",
+      "  (5566, 5012)\t1\n",
+      "  (5567, 3629)\t1\n",
+      "  (5567, 3322)\t1\n",
+      "  (5567, 3118)\t1\n",
+      "  (5567, 2796)\t1\n",
+      "  (5568, 7571)\t1\n",
+      "  (5568, 4752)\t1\n",
+      "  (5568, 6807)\t1\n",
+      "  (5568, 5401)\t1\n",
+      "  (5569, 3131)\t1\n",
+      "  (5569, 7667)\t1\n",
+      "  (5569, 4287)\t1\n",
+      "  (5569, 2444)\t1\n",
+      "  (5569, 3237)\t1\n",
+      "  (5569, 1699)\t1\n",
+      "  (5569, 3438)\t1\n",
+      "  (5569, 3869)\t1\n",
+      "  (5569, 906)\t1\n",
+      "  (5569, 1477)\t1\n",
+      "  (5570, 7267)\t1\n",
+      "  (5570, 6018)\t1\n",
+      "0       0\n",
+      "1       1\n",
+      "2       0\n",
+      "3       0\n",
+      "4       1\n",
+      "       ..\n",
+      "5566    1\n",
+      "5567    0\n",
+      "5568    0\n",
+      "5569    0\n",
+      "5570    0\n",
+      "Name: spam, Length: 5571, dtype: int32\n"
+     ]
+    }
+   ],
+   "source": [
+    "# C.8 create data\n",
+    "featureMatrix = x_counts\n",
+    "targetVector = df['spam']\n",
+    "#print(df['text_lemmatized'][0])\n",
+    "#print(x_counts[0])\n",
+    "#print(df)\n",
+    "print(featureMatrix)\n",
+    "print(targetVector)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      spam                                               text  \\\n",
+      "0        0                      Ok lar... Joking wif u oni...   \n",
+      "1        1  Free entry in 2 a wkly comp to win FA Cup fina...   \n",
+      "2        0  U dun say so early hor... U c already then say...   \n",
+      "3        0  Nah I don't think he goes to usf, he lives aro...   \n",
+      "4        1  FreeMsg Hey there darling it's been 3 week's n...   \n",
+      "...    ...                                                ...   \n",
+      "5566     1  This is the 2nd time we have tried 2 contact u...   \n",
+      "5567     0               Will ü b going to esplanade fr home?   \n",
+      "5568     0  Pity, * was in mood for that. So...any other s...   \n",
+      "5569     0  The guy did some bitching but I acted like i'd...   \n",
+      "5570     0                         Rofl. Its true to its name   \n",
+      "\n",
+      "                                        text_lemmatized  length  \n",
+      "0                       ok lar ... joking wif u oni ...      29  \n",
+      "1     free entry in 2 a wkly comp to win fa cup fina...     155  \n",
+      "2     u dun say so early hor ... u c already then sa...      49  \n",
+      "3     nah i do n't think he go to usf , he life arou...      61  \n",
+      "4     freemsg hey there darling it 's been 3 week 's...     147  \n",
+      "...                                                 ...     ...  \n",
+      "5566  this is the 2nd time we have tried 2 contact u...     160  \n",
+      "5567              will ü b going to esplanade fr home ?      36  \n",
+      "5568  pity , * wa in mood for that . so ... any othe...      57  \n",
+      "5569  the guy did some bitching but i acted like i '...     125  \n",
+      "5570                          rofl . it true to it name      26  \n",
+      "\n",
+      "[5571 rows x 4 columns]\n",
       "-----------------------------------------------------------------------------------------\n",
-      "5377    free entry to the gr8prizes wkly comp 4 a chan...\n",
-      "4268                     hey so whats the plan this sat ?\n",
-      "1493    how are you with money ... a in to you ... mon...\n",
-      "5162                              ok leave no need to ask\n",
-      "2595    sunshine quiz wkly q ! win a top sony dvd play...\n",
-      "                              ...                        \n",
-      "2143    you stayin out of trouble stranger ! ! saw dav...\n",
-      "521                            shall i come to get pickle\n",
-      "2612               yes . it 's all innocent fun . o : - )\n",
-      "3569                     she 's fine . sends her greeting\n",
-      "1770    dont show yourself . how far . put new picture...\n",
-      "Name: text_lemmatized, Length: 5571, dtype: object\n"
+      "      spam                                               text  \\\n",
+      "702      0  What is important is that you prevent dehydrat...   \n",
+      "1813     0                           Yes we are chatting too.   \n",
+      "1418     0                Lmao. Take a pic and send it to me.   \n",
+      "563      1  GENT! We are trying to contact you. Last weeke...   \n",
+      "2613     0  Thanks for sending this mental ability question..   \n",
+      "...    ...                                                ...   \n",
+      "1984     1  Urgent! Please call 09061743810 from landline....   \n",
+      "4347     1  U 447801259231 have a secret admirer who is lo...   \n",
+      "4282     0                                  U can call now...   \n",
+      "5142     0  Hi darlin im on helens fone im gonna b up the ...   \n",
+      "1228     1  FREE entry into our £250 weekly comp just send...   \n",
+      "\n",
+      "                                        text_lemmatized  length  \n",
+      "702   what is important is that you prevent dehydrat...      77  \n",
+      "1813                          yes we are chatting too .      24  \n",
+      "1418              lmao . take a pic and send it to me .      35  \n",
+      "563   gent ! we are trying to contact you . last wee...     159  \n",
+      "2613  thanks for sending this mental ability question..      49  \n",
+      "...                                                 ...     ...  \n",
+      "1984  urgent ! please call 09061743810 from landline...     153  \n",
+      "4347  u 447801259231 have a secret admirer who is lo...     145  \n",
+      "4282                                 u can call now ...      17  \n",
+      "5142  hi darlin im on helen fone im gon na b up the ...      88  \n",
+      "1228  free entry into our £250 weekly comp just send...     122  \n",
+      "\n",
+      "[5571 rows x 4 columns]\n"
      ]
     }
    ],
    "source": [
     "# C.9 shuffle rows of data \n",
     "shuffled = df.sample(frac=1)\n",
-    "print(df['text_lemmatized'])\n",
+    "#print(df['text_lemmatized'])\n",
+    "print(df)\n",
     "print('-----------------------------------------------------------------------------------------')\n",
-    "print(shuffled['text_lemmatized'])"
+    "#print(shuffled['text_lemmatized'])\n",
+    "print(shuffled)"
    ]
   },
   {
@@ -483,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -519,14 +628,14 @@
        " Name: spam, Length: 1114, dtype: int32]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# C.10 partition data (80% train - 20% test)\n",
-    "partition(x_counts, y, .20)"
+    "partition(featureMatrix, targetVector, .20)"
    ]
   },
   {
