Hopefully finished with data creation

--- a/assignment-3/kim_changsu_reyes-cortes_jesse_assignment3.ipynb
+++ b/assignment-3/kim_changsu_reyes-cortes_jesse_assignment3.ipynb
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -397,6 +397,7 @@
     "x_counts = cv.fit_transform(x)\n",
     "print(x_counts.shape)\n",
     "#print(x_counts)\n",
+    "#print(x_counts)\n",
     "#x_train_counts = cv.fit_transform(x_train)\n",
     "#print(x_train_counts.shape)\n",
     "#x_test_counts = cv.transform(x_test)\n",
@@ -413,85 +414,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  (0, 2052)\t1\n",
-      "  (1, 2816)\t1\n",
-      "  (1, 3190)\t1\n",
-      "  (1, 2812)\t1\n",
-      "  (1, 4683)\t1\n",
-      "  (2, 3580)\t1\n",
-      "  (2, 4114)\t1\n",
-      "  (2, 2529)\t1\n",
-      "  (2, 6776)\t1\n",
-      "  (2, 4340)\t1\n",
-      "  (2, 6661)\t1\n",
-      "  (3, 7713)\t1\n",
-      "  (3, 3183)\t1\n",
-      "  (3, 5161)\t1\n",
-      "  (3, 6724)\t1\n",
-      "  (4, 6550)\t1\n",
-      "  (4, 4287)\t2\n",
-      "  (4, 4387)\t1\n",
-      "  (4, 7116)\t1\n",
-      "  (4, 6592)\t1\n",
-      "  (4, 1856)\t1\n",
-      "  (4, 2424)\t1\n",
-      "  (4, 1581)\t1\n",
-      "  (4, 3397)\t1\n",
-      "  (4, 1390)\t1\n",
+      "  (0, 3770)\t1\n",
+      "  (0, 6532)\t1\n",
+      "  (1, 6452)\t1\n",
+      "  (1, 877)\t1\n",
+      "  (1, 6821)\t1\n",
+      "  (1, 5513)\t1\n",
+      "  (1, 3556)\t1\n",
+      "  (1, 2132)\t1\n",
+      "  (1, 7608)\t1\n",
+      "  (1, 6138)\t1\n",
+      "  (1, 3580)\t2\n",
+      "  (1, 6715)\t2\n",
+      "  (1, 6218)\t1\n",
+      "  (1, 661)\t1\n",
+      "  (2, 6218)\t3\n",
+      "  (2, 6820)\t1\n",
+      "  (2, 2031)\t3\n",
+      "  (2, 2654)\t1\n",
+      "  (2, 4439)\t2\n",
+      "  (2, 5776)\t1\n",
+      "  (2, 1976)\t1\n",
+      "  (2, 6007)\t1\n",
+      "  (2, 5745)\t1\n",
+      "  (2, 4598)\t1\n",
+      "  (2, 1768)\t1\n",
       "  :\t:\n",
-      "  (5566, 7553)\t1\n",
-      "  (5566, 7667)\t1\n",
-      "  (5566, 6715)\t2\n",
-      "  (5566, 7010)\t1\n",
-      "  (5566, 5073)\t1\n",
-      "  (5566, 3690)\t1\n",
-      "  (5566, 1943)\t1\n",
-      "  (5566, 1123)\t1\n",
-      "  (5566, 5302)\t1\n",
-      "  (5566, 3621)\t1\n",
-      "  (5566, 730)\t1\n",
-      "  (5566, 7136)\t1\n",
-      "  (5566, 2878)\t1\n",
-      "  (5567, 3493)\t1\n",
-      "  (5567, 2917)\t1\n",
-      "  (5568, 4379)\t1\n",
-      "  (5568, 7119)\t1\n",
-      "  (5569, 1581)\t1\n",
-      "  (5569, 4947)\t1\n",
-      "  (5569, 3297)\t1\n",
-      "  (5569, 1120)\t1\n",
-      "  (5569, 7623)\t1\n",
-      "  (5570, 4207)\t1\n",
-      "  (5570, 1951)\t1\n",
-      "  (5570, 3625)\t1\n",
-      "515     0\n",
-      "4630    0\n",
-      "2152    0\n",
-      "908     0\n",
-      "4890    0\n",
+      "  (5565, 7539)\t1\n",
+      "  (5565, 1383)\t1\n",
+      "  (5566, 7606)\t1\n",
+      "  (5566, 4036)\t1\n",
+      "  (5567, 5990)\t1\n",
+      "  (5567, 3425)\t1\n",
+      "  (5567, 4379)\t1\n",
+      "  (5567, 6854)\t1\n",
+      "  (5568, 5890)\t1\n",
+      "  (5568, 5091)\t1\n",
+      "  (5568, 4960)\t1\n",
+      "  (5568, 2444)\t1\n",
+      "  (5568, 4357)\t1\n",
+      "  (5568, 7113)\t1\n",
+      "  (5569, 4897)\t1\n",
+      "  (5569, 7153)\t1\n",
+      "  (5569, 6357)\t1\n",
+      "  (5569, 4195)\t1\n",
+      "  (5569, 1179)\t1\n",
+      "  (5569, 2743)\t1\n",
+      "  (5570, 2031)\t1\n",
+      "  (5570, 1297)\t1\n",
+      "  (5570, 3178)\t1\n",
+      "  (5570, 3486)\t1\n",
+      "  (5570, 1742)\t1\n",
+      "5006    0\n",
+      "671     1\n",
+      "656     0\n",
+      "552     0\n",
+      "3274    0\n",
       "       ..\n",
-      "634     1\n",
-      "617     0\n",
-      "3964    0\n",
-      "4752    0\n",
-      "1041    0\n",
+      "3985    0\n",
+      "3308    0\n",
+      "4028    0\n",
+      "4383    0\n",
+      "2556    0\n",
       "Name: spam, Length: 5571, dtype: int32\n"
      ]
     }
    ],
    "source": [
     "# C.8 create data\n",
-    "featureMatrix = x_counts\n",
+    "featureMatrix = cv.fit_transform(shuffled['text_lemmatized'])\n",
     "targetVector = shuffled['spam']\n",
-    "#print(df['text_lemmatized'][0])\n",
-    "#print(x_counts[0])\n",
+    "#print(shuffled['text_lemmatized'][0])\n",
     "#print(df)\n",
     "print(featureMatrix)\n",
     "print(targetVector)"
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -535,30 +535,30 @@
       "[5571 rows x 4 columns]\n",
       "-----------------------------------------------------------------------------------------\n",
       "      spam                                               text  length  \\\n",
-      "515      0                         S:)no competition for him.      26   \n",
-      "4630     0          Everybody had fun this evening. Miss you.      41   \n",
-      "2152     0  Hi kindly give us back our documents which we ...      77   \n",
-      "908      0                    WHITE FUDGE OREOS ARE IN STORES      31   \n",
-      "4890     0  Sounds like there could be a lot of time spent...     171   \n",
+      "5006     0                                    ILL B DOWN SOON      15   \n",
+      "671      1  SMS. ac sun0819 posts HELLO:\"You seem cool, wa...      93   \n",
+      "656      0  Sun cant come to earth but send luv as rays. c...     157   \n",
+      "552      0  Sure, if I get an acknowledgement from you tha...     120   \n",
+      "3274     0                                     Thanx a lot...      14   \n",
       "...    ...                                                ...     ...   \n",
-      "634      1  Dear Voucher Holder, 2 claim this weeks offer,...     143   \n",
-      "617      0                          For my family happiness..      25   \n",
-      "3964     0              If e timing can, then i go w u lor...      37   \n",
-      "4752     0  Well boy am I glad G wasted all night at apple...      62   \n",
-      "1041     0                     I'm in class. Will holla later      30   \n",
+      "3985     0           Whatever, juliana. Do whatever you want.      40   \n",
+      "3308     0  But i'm surprised she still can guess right lo...      50   \n",
+      "4028     0         Lol its ok I didn't remember til last nite      42   \n",
+      "4383     0  No need lar i go engin? Cos my sis at arts tod...      51   \n",
+      "2556     0  Fuck babe ... What happened to you ? How come ...      66   \n",
       "\n",
       "                                        text_lemmatized  \n",
-      "515                      s : ) no competition for him .  \n",
-      "4630        everybody had fun this evening . miss you .  \n",
-      "2152  hi kindly give u back our document which we su...  \n",
-      "908                       white fudge oreo are in store  \n",
-      "4890  sound like there could be a lot of time spent ...  \n",
+      "5006                                    ill b down soon  \n",
+      "671   sm . ac sun0819 post hello : '' you seem cool ...  \n",
+      "656   sun cant come to earth but send luv a ray . cl...  \n",
+      "552   sure , if i get an acknowledgement from you th...  \n",
+      "3274                                    thanx a lot ...  \n",
       "...                                                 ...  \n",
-      "634   dear voucher holder , 2 claim this week offer ...  \n",
-      "617                           for my family happiness..  \n",
-      "3964            if e timing can , then i go w u lor ...  \n",
-      "4752  well boy am i glad g wasted all night at apple...  \n",
-      "1041                   i 'm in class . will holla later  \n",
+      "3985        whatever , juliana . do whatever you want .  \n",
+      "3308  but i 'm surprised she still can guess right l...  \n",
+      "4028         lol it ok i did n't remember til last nite  \n",
+      "4383  no need lar i go engin ? co my si at art today...  \n",
+      "2556  fuck babe ... what happened to you ? how come ...  \n",
       "\n",
       "[5571 rows x 4 columns]\n"
      ]
@@ -594,43 +594,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[<4456x7961 sparse matrix of type '<class 'numpy.int64'>'\n",
-       " \twith 34805 stored elements in Compressed Sparse Row format>,\n",
+       " \twith 34599 stored elements in Compressed Sparse Row format>,\n",
        " <1114x7961 sparse matrix of type '<class 'numpy.int64'>'\n",
-       " \twith 8582 stored elements in Compressed Sparse Row format>,\n",
-       " 0       0\n",
-       " 1       1\n",
-       " 2       0\n",
-       " 3       0\n",
-       " 4       1\n",
+       " \twith 8792 stored elements in Compressed Sparse Row format>,\n",
+       " 515     0\n",
+       " 4630    0\n",
+       " 2152    0\n",
+       " 908     0\n",
+       " 4890    0\n",
        "        ..\n",
-       " 4451    0\n",
-       " 4452    0\n",
-       " 4453    0\n",
-       " 4454    0\n",
-       " 4455    0\n",
+       " 4043    0\n",
+       " 3120    0\n",
+       " 3381    1\n",
+       " 5339    0\n",
+       " 928     0\n",
        " Name: spam, Length: 4456, dtype: int32,\n",
-       " 4457    0\n",
-       " 4458    0\n",
-       " 4459    1\n",
-       " 4460    0\n",
-       " 4461    0\n",
+       " 5366    0\n",
+       " 3863    1\n",
+       " 237     0\n",
+       " 4306    0\n",
+       " 256     0\n",
        "        ..\n",
-       " 5566    1\n",
-       " 5567    0\n",
-       " 5568    0\n",
-       " 5569    0\n",
-       " 5570    0\n",
+       " 634     1\n",
+       " 617     0\n",
+       " 3964    0\n",
+       " 4752    0\n",
+       " 1041    0\n",
        " Name: spam, Length: 1114, dtype: int32]"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
