Deleted parts past C to hopefully merge easier

--- a/assignment-3/kim_changsu_reyes-cortes_jesse_assignment3.ipynb
+++ b/assignment-3/kim_changsu_reyes-cortes_jesse_assignment3.ipynb
@@ -642,117 +642,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def precision(x,y):\n",
-    "    truePositive = 0\n",
-    "    falsePositive = 0\n",
-    "    for i in range(0, len(x)):\n",
-    "        if(x[i] == 1 and .5 < y[i]):\n",
-    "            truePositive = truePositive + 1\n",
-    "        elif(x[i] == 0 and .5 < y[i]):\n",
-    "            falsePositive = falsePositive + 1\n",
-    "    return truePositive/(truePositive+falsePositive)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def recall(x,y):\n",
-    "    truePositive = 0\n",
-    "    falseNegative = 0\n",
-    "    for i in range(0, len(x)):\n",
-    "        if(x[i] == 1 and .5 < y[i]):\n",
-    "            truePositive = truePositive + 1\n",
-    "        elif(x[i] == 0 and y[i] <= .5):\n",
-    "            falseNegative = falseNegative + 1\n",
-    "    return truePositive/(truePositive+falseNegative)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-73-adb556589281>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-73-adb556589281>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    return 2precision(x,y)recall(x,y)/(precision(x,y)+recall(x,y))\u001b[0m\n\u001b[1;37m                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "def f1(x,y):\n",
-    "    return 2precision(x,y)recall(x,y)/(precision(x,y)+recall(x,y))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def confusion_matrix(x,y):\n",
-    "    TN = 0\n",
-    "    FP = 0\n",
-    "    FN = 0\n",
-    "    TP = 0\n",
-    "    for i in range(0, len(x)):\n",
-    "        if(x[i]==0 and y[i] <= .5):\n",
-    "            TN = TN + 1\n",
-    "        elif(x[i]==0 and .5 < y[i]):\n",
-    "            FP = FP + 1\n",
-    "        elif(x[i]==1 and y[i] <= .5):\n",
-    "            FN = FN + 1\n",
-    "        elif(x[i]==1 and .5 < y[i]):\n",
-    "            TP = TP + 1\n",
-    "\n",
-    "    return [[TN, FP],[FN, TP]]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'a' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-76-94654b5bc7d8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0malpha\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m0.0001\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.001\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.01\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1.0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1.5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2.0\u001b[0m\u001b[1;33m]\u001b[0m      \u001b[1;31m#hyperparameter\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mscore\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m:\u001b[0m                                                 \u001b[1;31m#loop hyperparameter and\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m     \u001b[0mmul_NB\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mMultinomial_NB\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[0mmul_NP\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m                   \u001b[1;31m#need to put parameter\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'a' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#Part D.\n",
-    "#11 Model selection via Hyper-parameter tuning\n",
-    "alpha = [0.0001, 0.001, 0.01, 0,1, 0.5, 1.0, 1.5, 2.0]      #hyperparameter \n",
-    "score = []\n",
-    "for i in a:                                                 #loop hyperparameter and \n",
-    "    mul_NB = Multinomial_NB(i)\n",
-    "    mul_NP.fit()                   #need to put parameter\n",
-    "    prediction = mul_NP.predict()  #need to put parameter\n",
-    "    score.append(f1())             #need to put parameter\n",
-    "\n",
-    "max_score = 0;\n",
-    "model_number = 0;\n",
-    "for j in range(0, len(score)):\n",
-    "    if score[j] > max_score:\n",
-    "        max_score = score[j]\n",
-    "        model_number = j\n",
-    "    else:\n",
-    "        continue"
+    "#11 Model selection via Hyper-parameter tuning\n"
    ]
   },
   {
