seperated imported files into a new cell

--- a/assignment-3/kim_changsu_reyes-cortes_jesse_assignment3.ipynb
+++ b/assignment-3/kim_changsu_reyes-cortes_jesse_assignment3.ipynb
@@ -26,8 +26,28 @@
     "import itertools\n",
     "from random import sample \n",
     "import nltk\n",
-    "\n",
-    "\n",
+    "import matplotlib.pyplot as plt\\n\n",
+    "plt.style.use('ggplot')\n",
+    "import seaborn as sns\n",
+    "nltk.download('wordnet')\n",
+    "nltk.download('punkt')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicting(Log):  [0, 1, 1, 1, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
     "#################             NAIVE BAYES CLASSIFIER             #################\n",
     "\n",
     "# part A: model code (design multinomial naive bayes)\n",
@@ -458,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
